# python-nts

./: .flake8  .gitignore  LICENSE  noxfile.py  pyproject.toml
src/nts/: __init__.py  nts.py
tests/: __init__.py  fakeMIDI.py  test_misc.py  test_nts_midi_out.py
